fixed h1 letter spacing

--- a/html/css/stylesheet.css
+++ b/html/css/stylesheet.css
@@ -26,7 +26,7 @@ h1 {
 	margin: auto;
 	font-weight: 300;
 	font-size: 35px;
-	letter-spacing: 5px;
+	letter-spacing: 12px;
 	text-align: center;
 	background-color: white;
 	border-radius: 15px;
